# SmartHome

./: .gitignore  .ruff.toml  LICENSE  Makefile  README.md  api.py  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 56a7bf2dfb20_init.py  8cf5466f8061_initial_migration.py  9a35c48d8786_initial_smart_home_core.py
apps/domain/protocols/: task.py
apps/domain/states/: task.py
apps/models/: account.py
apps/repositories/: account.py  protocol.py  state.py
backend/: Makefile  api.py  app.py
backend/adapters/notifications/: telegram.py
backend/alembic/: env.py
backend/alembic/versions/: 2ba29f5cf413_add_scene_table.py  45212a14329c_initial_migration.py  501a412bb7e6_add_time_field.py  (+4 more)
backend/configs/: base_config.py  config.py  dev_config.py  prod_config.py
backend/core/: configurate_logging.py  enums.py  templates.py  types.py
backend/initialization/: __init__.py  middleware.py  tasks.py
backend/utils/: json.py
configs/: base_config.py  config.py  dev_config.py  prod_config.py
core/: enums.py  types.py
core/adapter/: tasks.py  transmitter.py  transmitter_factory.py  transmitter_interface.py
core/dependencies/: db.py  transmitter.py
core/extensions/: __init__.py
core/logging/: logging_configurate_logging.py  loguru_configurate_logging.py
core/models/: button.py  device.py  protocol.py  state.py
core/schemas/: account.py
core/services/: account.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
initialization/: __init__.py  tasks.py
server/: protocol.py  server.py
(+86 files in other folders)
