[project]
name = "smarthome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "greenlet>=3.1.1",
    "jinja2>=3.1.5",
    "jsonpath-ng>=1.7.0",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "simplejson>=3.20.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
